updating starlight css

--- a/dashboard_source_folder/css/starlight_css.css
+++ b/dashboard_source_folder/css/starlight_css.css
@@ -56,7 +56,7 @@ NOTE:
   color: red;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
-  font-weight: bold;
+  font-weight: 260;
   font-size: 60px;
   font-family: arial, helvetica;
   margin-top: 5px;
